feat: 認証に関するページの文言を日本語に変更

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -27,7 +27,7 @@ ja:
         updated_at: 更新日
     models:
       user: ユーザー
-  devise:
+  devise: &devise
     confirmations:
       confirmed: メールアドレスが確認できました。
       new:
@@ -131,6 +131,7 @@ ja:
       send_instructions: アカウントのロック解除方法を数分以内にメールでご連絡します。
       send_paranoid_instructions: アカウントが見つかった場合、アカウントのロック解除方法を数分以内にメールでご連絡します。
       unlocked: アカウントをロック解除しました。
+  users: *devise
   errors:
     messages:
       already_confirmed: は既に登録済みです。ログインしてください。
